create&write README.md, make TODOs, minor edits