@@ -1,33 +1,28 @@
 package org.foxycue.foxycue;
 import java.io.BufferedReader;
-import java.io.IOException;
-import java.io.InputStream;
 import java.io.InputStreamReader;
 import java.net.*;
-import java.net.http.HttpClient;
-import java.net.http.HttpRequest;
-import java.net.http.HttpResponse;
-import org.foxycue.foxycue.IO;
 
 import CueSheetCore.*;
 import com.google.gson.Gson;
 
 public class Parser {
 
-    private static final String USER_AGENT = "FoxyCue/0.1";
+    private static final String USER_AGENT = "FoxyCue/0.2";
     private static final String DISCOGS_API_URL = "https://api.discogs.com/releases/";
 
-    public static Release parse(String releaseId) {
+    public static Release parseReleaseViaId(String releaseId) {
         Release release = new Release();
-        String jsonResponse = null;
+        String jsonResponse;
         try {
-            // Send the GET request to the Discogs API
+            // send the GET request to the Discogs API
             jsonResponse = sendGET(releaseId);
         } catch (SocketTimeoutException e) {
-            //throw custom exception!
+            // TODO throw custom exception! socket timeout!
             System.out.println("socket timed out!");
             return null;
         } catch (Exception e) {
+            // TODO throw generic exception!
             throw new RuntimeException(e);
         }
         if (jsonResponse != null) {
@@ -37,27 +32,10 @@ public class Parser {
         return release;
     }
 
-    private static HttpResponse<String> getJsonFromDiscogs(String releaseId) throws ProtocolException {
-        String url = DISCOGS_API_URL + releaseId;
-        HttpClient client = HttpClient.newHttpClient();
-        HttpRequest request = HttpRequest.newBuilder().uri(URI.create(url)).build();
-        HttpResponse<String> response = null;
-        try {
-            response = client.send(request, HttpResponse.BodyHandlers.ofString());
-        } catch (IOException e) {
-            //throw custom exceptions!
-            throw new RuntimeException(e);
-        } catch (InterruptedException e) {
-            throw new RuntimeException(e);
-        }
-        return response;
-    }
-
-    // The sendGET method is the same as the one I provided earlier
     private static String sendGET(String releaseId) throws Exception {
-        String url = DISCOGS_API_URL + releaseId;
 
-        HttpURLConnection connection = (HttpURLConnection) new URL(url).openConnection();
+        URL url = new URI(DISCOGS_API_URL + releaseId).toURL();
+        HttpURLConnection connection = (HttpURLConnection) url.openConnection();
         connection.setRequestMethod("GET");
         connection.setRequestProperty("User-Agent", USER_AGENT);
 
